hphp/hack/test/typecheck/enum_class_label/type_const_label.php.exp
ERROR: File "type_const_label.php", line 10, characters 7-8:
Invalid argument (Typing[4110])
  File "type_const_label.php", line 10, characters 7-8:
  Expected a class with a constant `T`
  File "type_const_label.php", line 7, characters 33-33:
  But got `E`
  File "type_const_label.php", line 3, characters 12-12:
  `E` is defined here
ERROR: File "type_const_label.php", line 11, characters 3-5:
This label is not a valid reference to a member of the given enum class (Typing[4110])
  File "type_const_label.php", line 11, characters 4-5:
  Expected a class with a constant `T`
  File "type_const_label.php", line 11, characters 3-3:
  But got `E`
  File "type_const_label.php", line 3, characters 12-12:
  `E` is defined here
