hphp/hack/test/typecheck/enum_class_label/type_const_label.php
<?hh

enum class E: mixed {
  const type T = int;
}

function get(HH\EnumClass\Label<E, int> $label): void {}

function test(): void {
  get(#T);
  E#T;
}
